--- a/Ai-MarTech.html
+++ b/Ai-MarTech.html
@@ -83,18 +83,18 @@
             <p>Chuẩn bị cho việc sử dụng AI là yếu tố then chốt để cạnh tranh trong thị trường ngày nay. Các doanh nghiệp thường không nhận ra tầm quan trọng và khả năng ngày càng tăng của AI đang khiến họ có nguy cơ bị các đối thủ cạnh tranh vượt qua.</p>
             <h2 class="mb-3 mt-5">3. Lợi ích AI mang lại cho nền tảng martech trong doanh nghiệp</h2>
             <p><b>1.Cá nhân hóa</b></p>
-            <li><p>Cá nhân hóa rất quan trọng khi bạn muốn mang lại trải nghiệm tốt nhất cho khách hàng, cải thiện mức độ tương tác để biến khách hàng tiềm năng trở thành khách hàng thân thiết.</p></li>
-<li><p>Cá nhân hóa kết hợp với AI có thể giúp bạn tận dụng tối đa tất cả dữ liệu bạn đang thu thập. </p></li>
+            <li>Cá nhân hóa rất quan trọng khi bạn muốn mang lại trải nghiệm tốt nhất cho khách hàng, cải thiện mức độ tương tác để biến khách hàng tiềm năng trở thành khách hàng thân thiết.</li>
+<li>Cá nhân hóa kết hợp với AI có thể giúp bạn tận dụng tối đa tất cả dữ liệu bạn đang thu thập.</li>
 <p>Ví dụ: AI có thể giúp bạn phân tích dữ liệu từ khách hàng truy cập trang web để điều chỉnh thông điệp của bạn dựa trên sở thích và thói quen của họ. Nó cũng có thể giúp bạn cải thiện phân đoạn để gửi đúng thông điệp vào đúng thời điểm.</p>
-<li><p>AI không chỉ thu thập và hiểu dữ liệu. Nó hiểu hành vi con người  và làm thế nào để các hành động tiếp theo có thể ảnh hưởng đến quyết định mua hàng của khách hàng.</p></li>
+<li>AI không chỉ thu thập và hiểu dữ liệu. Nó hiểu hành vi con người  và làm thế nào để các hành động tiếp theo có thể ảnh hưởng đến quyết định mua hàng của khách hàng.</li>
 <p><b>2. Phân tích khách hàng</b></p>
-            <li><p>Cách tốt nhất để duy trì và phát triển đó là lắng nghe khách hàng và hiểu họ muốn gì ở bạn. Bạn cần biết họ nghĩ gì về thương hiệu của mình cũng như diễn giải các đánh giá, phản hồi của họ.</p></li>
-<li><p>Tất cả bài đăng, nhận xét, đánh giá trên mạng xã hội đều có thể đóng góp vào quá trình phân tích tổng thể. AI giúp bạn lọc tất cả các phản hồi để sắp xếp ngăn nắp chủ đề bạn tập trung vào.</p></li>
-<li><p>Ai giúp bạn tiết kiệm thời gian, đồng thời khám phá những thông tin chi tiết mà có thể bạn đã bỏ lỡ trong quá khứ. Những dữ liệu đó có thể là một lợi thế đáng kể để điều chỉnh chiến thuật dựa trên những phát hiện của bạn.</p></li>
+            <li>Cách tốt nhất để duy trì và phát triển đó là lắng nghe khách hàng và hiểu họ muốn gì ở bạn. Bạn cần biết họ nghĩ gì về thương hiệu của mình cũng như diễn giải các đánh giá, phản hồi của họ.</li>
+<li>Tất cả bài đăng, nhận xét, đánh giá trên mạng xã hội đều có thể đóng góp vào quá trình phân tích tổng thể. AI giúp bạn lọc tất cả các phản hồi để sắp xếp ngăn nắp chủ đề bạn tập trung vào.</li>
+<li>Ai giúp bạn tiết kiệm thời gian, đồng thời khám phá những thông tin chi tiết mà có thể bạn đã bỏ lỡ trong quá khứ. Những dữ liệu đó có thể là một lợi thế đáng kể để điều chỉnh chiến thuật dựa trên những phát hiện của bạn.</li>
 <p><b>3. Tiết kiệm chi phí khi tích hợp các công cụ martech</b></p>
-            <li><p>Một thách thức khi quản lý martech là quy trình quản lý các tích hợp và liệu các công cụ có thể hoạt động cùng nhau hay không. Khi thêm các công cụ mới vào martech, điều quan trọng là phải khám phá cách chúng có thể hoạt động cùng với ngăn xếp hiện có của bạn.</p></li>
+            <li>Một thách thức khi quản lý martech là quy trình quản lý các tích hợp và liệu các công cụ có thể hoạt động cùng nhau hay không. Khi thêm các công cụ mới vào martech, điều quan trọng là phải khám phá cách chúng có thể hoạt động cùng với ngăn xếp hiện có của bạn.</li>
 <p>Ví dụ: CRM và học máy có thể giúp bạn tiết kiệm tiền và tài nguyên miễn là chúng được tích hợp.</p>
-<li><p>Thay vì xem xét các công cụ khác nhau, bạn có thể xây dựng tổng quan toàn diện về trải nghiệm khách hàng. Quản lý mối quan hệ có thể dễ dàng hơn khi kết hợp tự động, phân tích dự đoán và phân đoạn có thể cải thiện trải nghiệm của khách hàng.</p></li>
+<li>Thay vì xem xét các công cụ khác nhau, bạn có thể xây dựng tổng quan toàn diện về trải nghiệm khách hàng. Quản lý mối quan hệ có thể dễ dàng hơn khi kết hợp tự động, phân tích dự đoán và phân đoạn có thể cải thiện trải nghiệm của khách hàng.</li>
 <p><b>4. Tối ưu hóa chi tiêu quảng cáo</b></p>
             <p>AI có thể giúp bạn mở rộng nỗ lực quảng cáo của mình. Nó có thể giúp bạn đánh giả khả năng của các nhà cung cấp khác nhau. Nó cũng có thể phân tích dữ liệu người tiêu dùng theo thời gian thực để cải thiện kết quả đặt giá thầu của bạn. Chúng tạo ra xu thế tất yếu của thời đại công nghệ số, làm thay đổi cách thức truyền đạt và nội dung tạo nên quảng cáo.</p>
              <p><b>5. Sử dụng AI như bước đầu tiên để chuyển đổi doanh nghiệp</b></p>
