--- a/CRM-la-gi.html
+++ b/CRM-la-gi.html
@@ -74,25 +74,25 @@
               <img src="images/crm-la-gi.jpg" alt="" class="img-fluid">
             </p>
             <h4 class="mb-3 mt-5"><i>Các thành phần chính của định nghĩa này bao gồm:</i></h4>
-            <li><p>Quy trình chiến lược</p></li>
+            <li>Quy trình chiến lược</li>
             <p>Điều này có nghĩa là các hoạt động CRM được khởi xướng và quản lý bắt đầu từ cấp cao nhất của tổ chức. CRM không thuộc về bất kỳ bộ phận đơn lẻ nào mà cần sự đóng góp và hỗ trợ từ tất cả các bộ phận của công ty. Hơn nữa, CRM là một quá trình liên tục không thể được xử lý như một dự án triển khai phần mềm khác. Nó phải được xem như một nỗ lực không ngừng với mục tiêu của công ty trở nên tập trung hơn vào khách hàng.</p>
-            <li><p>Lựa chọn</p></li>
+            <li>Lựa chọn</li>
             <p>Khi giá trị kinh tế của một khách hàng là cơ sở để phân bổ nguồn lực, thì điều hợp lý là các công ty phải tập trung vào những khách hàng có lợi nhất hoặc có khả năng sinh lời trước. Đây không phải là việc từ chối các dịch vụ cho một số khách hàng nhất định mà là để nhận ra rằng có sự phù hợp giữa dịch vụ của một công ty với mong muốn, hành vi và đặc điểm của phân khúc.</p>
-            <li><p>Tương tác</p></li>
+            <li>Tương tác</li>
             <p>Điều này có nghĩa là mối quan hệ giữa khách hàng và công ty có dạng một cuộc đối thoại tương tác. Thông tin và hàng hóa được trao đổi và quan trọng nhất là sự trao đổi phát triển như một chức năng của những trao đổi trong quá khứ. Điều này rất khác với quan điểm cho rằng các công ty bán các sản phẩm và dịch vụ một lần cho khách hàng (xem Chiến lược Tiếp thị Dịch vụ).</p>
-            <li><p>Khách hàng</p></li>
+            <li>Khách hàng</li>
             <p>Tùy thuộc vào ngành và công ty, khách hàng có thể là một tài khoản cá nhân, một hoặc một số phân khúc trong một thị trường hoặc toàn bộ thị trường. Ngoài ra, khách hàng không chỉ bao gồm người dùng cuối mà còn bao gồm những người trung gian, như nhà phân phối, nhà bán lẻ, v.v.</p>
-            <li><p>Giá trị hiện tại và tương lai của khách hàng</p></li>
+            <li>Giá trị hiện tại và tương lai của khách hàng</li>
             <p>Điều này có nghĩa là các công ty đang chuyển từ việc trích lợi nhuận từ các giao dịch đơn lẻ sang tối đa hóa lợi nhuận qua một loạt các giao dịch. Do đó, các công ty đang bắt đầu tối đa hóa Quyền sở hữu khách hàng - tức là giá trị của tất cả các mối quan hệ khách hàng của họ đối với họ.</p>
             <h2 class="mb-3 mt-5">3. Chương trình khách hàng thân thiết</h2>
             <p>Các công ty từ lâu đã sử dụng các chương trình khách hàng thân thiết nhằm nỗ lực đánh giá giá trị hiện tại và tương lai của khách hàng. Chương trình khách hàng thân thiết là một quy trình tiếp thị nhằm tạo ra phần thưởng cho khách hàng trên cơ sở họ mua hàng lặp lại. Những người tiêu dùng tham gia chương trình khách hàng thân thiết chọn tập trung nhiều hơn vào việc mua hàng của họ với một công ty cụ thể, do đó từ bỏ lựa chọn miễn phí mà họ có. Để đổi lấy việc tập trung mua hàng với công ty, họ tích lũy tài sản (ví dụ: “điểm”) để đổi lấy sản phẩm và dịch vụ, thường được liên kết với công ty đầu mối.</p>
 <h2 class="mb-3 mt-5">4. Thước đo để đo lường và quản lý mức độ trung thành của khách hàng</h2>
             <p>Theo truyền thống, các số liệu khác nhau (xem Số liệu Tiếp thị) đã được sử dụng để đo lường và quản lý lòng trung thành của khách hàng được dự đoán là các chỉ số hợp lý về giá trị thực tế của khách hàng. Các chỉ số này giúp các công ty ưu tiên khách hàng của họ theo cách cho phép phân bổ tỷ lệ nguồn lực cao hơn cho những khách hàng được kỳ vọng sẽ tạo ra lợi nhuận lớn hơn trong tương lai. Sau đây là một số chỉ số phổ biến được sử dụng:</p>
-            <li><p>Lần truy cập gần đây, tần suất và giá trị tiền tệ (RFM)</p></li>
+            <li>Lần truy cập gần đây, tần suất và giá trị tiền tệ (RFM)</li>
             <p>Lần truy cập gần đây đề cập đến khoảng thời gian kể từ lần cuối cùng khách hàng đặt hàng với công ty, tần suất đề cập đến tần suất khách hàng đặt hàng từ công ty trong một khoảng thời gian xác định nhất định và giá trị tiền tệ biểu thị số tiền mà khách hàng chi tiêu cho một giao dịch trung bình. Điểm tính toán càng cao, khách hàng càng có nhiều khả năng sinh lợi trong tương lai.</p>
-            <li><p>Giá trị khách hàng trong quá khứ (PCV)</p></li>
+            <li>Giá trị khách hàng trong quá khứ (PCV)</li>
             <p>Trong mô hình này, giá trị của khách hàng được xác định trên cơ sở tổng đóng góp (vào lợi nhuận) mà khách hàng đã cung cấp trong quá khứ. Vì sản phẩm / dịch vụ được mua vào các thời điểm khác nhau trong suốt thời gian tồn tại của khách hàng, nên tất cả các giao dịch đều được điều chỉnh theo giá trị thời gian của tiền.</p>
-            <li><p>Chia sẻ của Wallet (SOW)</p></li>
+            <li>Chia sẻ của Wallet (SOW)</li>
             <p>Điều này đề cập đến tỷ lệ giá trị danh mục được tính bởi một thương hiệu đầu mối hoặc một công ty đầu mối trong cơ sở người mua của họ. Nó có thể được đo lường ở cấp độ khách hàng cá nhân hoặc ở cấp độ tổng hợp.</p>
             <p>Sự phát triển liên tục của CM được thực hiện bằng cách hiểu các mối quan hệ tương tác phát triển giữa công ty và khách hàng và giữa chính khách hàng. Các công ty sẽ ngày càng có thể tùy chỉnh các thông điệp tiếp thị cho các đối tượng mục tiêu lớn hơn trên cơ sở phản ứng mong đợi của khách hàng và giá trị của khách hàng đối với công ty. Bằng cách thực hiện theo các chiến lược CRM được thảo luận ở đây, các công ty có thể giảm chi phí tiếp thị tổng thể, tăng tỷ lệ phản hồi tổng thể của khách hàng và quan trọng nhất là tăng khách hàng tổng thể và lợi nhuận của công ty.</p>
             <div class="tag-widget post-tag-container mb-5 mt-5">
