--- a/Ngan-xep-cong-nghe-MarTech-Stack.html
+++ b/Ngan-xep-cong-nghe-MarTech-Stack.html
@@ -63,10 +63,10 @@
             <p>Loại hình kinh doanh bạn có cũng sẽ ảnh hưởng đến công nghệ nào bạn có thể thấy quan trọng và cách tổ chức chúng. Điểm khác biệt chính là doanh nghiệp của bạn bán sản phẩm hoặc dịch vụ của mình cho người tiêu dùng (B2C) hay cho doanh nghiệp (B2B). Các nhà tiếp thị B2C và B2B sẽ sử dụng các kênh và kỹ thuật khác nhau để có được khách hàng và do đó sẽ có các nhu cầu công nghệ khác nhau.</p>
             <p>Điều quan trọng nữa là bạn phải biết bộ kỹ năng và thành viên nhóm nào bạn cần có để đảm bảo rằng nhóm tiếp thị của bạn nhận được lợi ích tối đa từ các công nghệ bạn có.</p>
             <p>Dưới đây là một số loại vai trò tiếp thị cần xem xét khi nghĩ về cách công nghệ tiếp thị của bạn sẽ khen ngợi nhóm của bạn:</p>
-            <li><p>Thu hút khách hàng - tiếp thị trực tuyến, tiếp thị đối tác, tiếp thị sự kiện, tối ưu hóa trang web</p></li>
-            <li><p>Thương hiệu & Truyền thông - truyền thông xã hội, quan hệ công chúng, tài trợ, quảng cáo phát sóng</p></li>
-<li><p>Tiếp thị sản phẩm - tiếp thị sản phẩm, quan hệ nhà phân tích, tiếp thị nội dung</p></li>
-<li><p>Hoạt động tiếp thị - hiệu suất chiến dịch, phân tích dữ liệu và thông tin chi tiết Đặc biệt, hoạt động tiếp thị (hoặc hoạt động tiếp thị) là một vai trò quan trọng sẽ giúp cho phép những người còn lại trong nhóm tiếp thị đưa ra quyết định thông minh với dữ liệu tiếp thị của bạn. Nhiều chuyên gia tiếp thị khuyên rằng đây là vai trò quan trọng cần có khi phát triển đội ngũ.</p></li>
+            <li>Thu hút khách hàng - tiếp thị trực tuyến, tiếp thị đối tác, tiếp thị sự kiện, tối ưu hóa trang web</li>
+            <li>Thương hiệu & Truyền thông - truyền thông xã hội, quan hệ công chúng, tài trợ, quảng cáo phát sóng</li>
+<li>Tiếp thị sản phẩm - tiếp thị sản phẩm, quan hệ nhà phân tích, tiếp thị nội dung</li>
+<li>Hoạt động tiếp thị - hiệu suất chiến dịch, phân tích dữ liệu và thông tin chi tiết Đặc biệt, hoạt động tiếp thị (hoặc hoạt động tiếp thị) là một vai trò quan trọng sẽ giúp cho phép những người còn lại trong nhóm tiếp thị đưa ra quyết định thông minh với dữ liệu tiếp thị của bạn. Nhiều chuyên gia tiếp thị khuyên rằng đây là vai trò quan trọng cần có khi phát triển đội ngũ.</li>
             <div class="tag-widget post-tag-container mb-5 mt-5">
                <div class="tagcloud">
                   <a href="#" class="tag-cloud-link">MarTech</a>
