--- a/SaaS.html
+++ b/SaaS.html
@@ -71,7 +71,7 @@
 <p class="mb-5">
               <img src="images/saas-integration-applications-1.png" alt="" class="img-fluid">
             </p>
-<p>SaaS được coi là mô hình 4.0 ưu việt hơn so với phần mềm on-premise - dạng phần mềm được doanh nghiệp mua lại thông qua một giấy phép vĩnh viễn. Người dùng có thể mở chạy ứng dụng thông qua trình duyệt mà không cần phải cài đặc. Office365, Gmail, Hotmail, Outlook là những saas tiêu biểu. Hay một vài phần mềm được phát triển rộng rãi bởi nhà cung cấp saas hàng đầu như Amazon web Service, Slack, Oracle, Adobe Creative Cloud, Dropbox, Google, IBM, Microsoft,…</p>
+<p>SaaS được coi là mô hình 4.0 ưu việt hơn so với phần mềm on-premise - dạng phần mềm được doanh nghiệp mua lại thông qua một giấy phép vĩnh viễn. Người dùng có thể mở chạy ứng dụng thông qua trình duyệt mà không cần phải cài đặt. Office365, Gmail, Hotmail, Outlook là những saas tiêu biểu. Hay một vài phần mềm được phát triển rộng rãi bởi nhà cung cấp saas hàng đầu như Amazon web Service, Slack, Oracle, Adobe Creative Cloud, Dropbox, Google, IBM, Microsoft,…</p>
 <h2 class="mb-3 mt-5">Ý nghĩa của SaaS đối với doanh nghiệp</h2>
 <p class="mb-5">
               <img src="images/Fotolia_172854267_XS.jpg" alt="" class="img-fluid">
