--- a/Web-Analytics-Software.html
+++ b/Web-Analytics-Software.html
@@ -69,10 +69,10 @@
 <p>Để hiểu biết và tối ưu hóa việc sử dụng web thì "Web analytics" là " là giải pháp tối ưu, nó là quá trình đo đạc, thu thập, phân tích và báo cáo số liệu web. Cùng với đó Web analytics có thể được sử dụng để nghiên cứu kinh doanh cũng như thị trường, đánh giá và thúc đẩy nâng cao hiệu quả của một trang web.</p>
 <p>Web analytics giúp các doanh nghiệp đo kết quả chiến dịch quảng cáo phát sóng. Web analytics giúp tính sự thay đổi của lượng truy cập vào một trang web sau sự ra mắt của một chiến dịch quảng cáo mới nào đó.</p>
 <h2 class="mb-3 mt-5">Các bước cơ bản để thực hiện Web Analytics là gì?</h2>
-<li><p>Bước 1: Thu thập số liệu: Sưu tập  dữ liệu cơ bản. Mục tiêu của giai đoạn này là để thu thập dữ liệu.</p></li>
-<li><p>Bước 2: Xử lý dữ liệu thành thông tin: Mục tiêu của giai đoạn này là lấy dữ liệu và chuyển nó thành thông tin, đặc biệt là số liệu.</p></li>
-<li><p>Bước 3: Phát triển KPI: Giai đoạn này tập trung vào việc sử dụng các tỷ lệ  và truyền chúng với chiến lược kinh doanh, đề cập đến chỉ số thực hiện.</p></li>
-<li><p>Bước 4: Xây dựng chiến lược trực tuyến: Giai đoạn này có liên quan với mục tiêu trực tuyến, mục tiêu và tiêu chuẩn cho các tổ chức, doanh nghiệp. Những chiến lược này thường liên quan đến việc kiếm tiền, tiết kiệm tiền, hoặc gia tăng thị phần.</p></li>
+<li>Bước 1: Thu thập số liệu: Sưu tập  dữ liệu cơ bản. Mục tiêu của giai đoạn này là để thu thập dữ liệu.</li>
+<li>Bước 2: Xử lý dữ liệu thành thông tin: Mục tiêu của giai đoạn này là lấy dữ liệu và chuyển nó thành thông tin, đặc biệt là số liệu.</li>
+<li>Bước 3: Phát triển KPI: Giai đoạn này tập trung vào việc sử dụng các tỷ lệ  và truyền chúng với chiến lược kinh doanh, đề cập đến chỉ số thực hiện.</li>
+<li>Bước 4: Xây dựng chiến lược trực tuyến: Giai đoạn này có liên quan với mục tiêu trực tuyến, mục tiêu và tiêu chuẩn cho các tổ chức, doanh nghiệp. Những chiến lược này thường liên quan đến việc kiếm tiền, tiết kiệm tiền, hoặc gia tăng thị phần.</li>
 <h2 class="mb-3 mt-5">Google Analytics là gì?</h2>
 <p class="mb-5">
               <img src="images/image_2.jpg" alt="" class="img-fluid">
@@ -82,14 +82,14 @@
 <p>GA là được sử dụng miễn phí và dễ dàng đăng ký vì vậy mà được các công ty, doanh nghiệp sử dụng để đánh giá và quản trị website cho họ rộng rãi.</p>
 <p>Chúng ta nên bắt đầu bằng một số thông tin và các khái niệm cơ bản nếu chúng ta mới bắt đầu tìm hiểu về công cụ đo lường website này.</p>
 <h2 class="mb-3 mt-5"> Các tính năng chính của Google Analytics mà bạn cần biết?</h2>
-<li><p>Tính năng 1: Tùy chỉnh Dashboard để xem những dữ liệu cần thiết</p></li>
-<li><p>Tính năng 2: Sử dụng Advanced Segment để theo dõi các chiến dịch cụ thể</p></li>
-<li><p>Tính năng 3: Xem dữ liệu nhân khẩu học của nguồn đối tượng truy cập vào website: Nhóm tuổi, địa điểm, chủ đề ưa thích…</p></li>
-<li><p>Tính năng 4: Xem các nội dung, từ khóa mà khách hàng thường xuyên tìm kiếm trên website</p></li>
-<li><p>Tính năng 5 :Funnel Visualization: Kiểm tra người dùng thoát trang ở bước nào trong quá trình mua hàng – thanh toán</p></li>
-<li><p>Tính năng 6: Theo dõi doanh thu của các sản phẩm</p></li>
-<li><p>Tính năng 7: Theo dõi hành vi người sử dụng (Multi-Channel Funnels)</p></li>
-<li><p>Tính năng 8: Tạo các mô hình so sánh mức độ tham gia của các kênh marketing (Model Comparison)</p></li>
+<li>Tính năng 1: Tùy chỉnh Dashboard để xem những dữ liệu cần thiết</li>
+<li>Tính năng 2: Sử dụng Advanced Segment để theo dõi các chiến dịch cụ thể</li>
+<li>Tính năng 3: Xem dữ liệu nhân khẩu học của nguồn đối tượng truy cập vào website: Nhóm tuổi, địa điểm, chủ đề ưa thích…</li>
+<li>Tính năng 4: Xem các nội dung, từ khóa mà khách hàng thường xuyên tìm kiếm trên website</li>
+<li>Tính năng 5 :Funnel Visualization: Kiểm tra người dùng thoát trang ở bước nào trong quá trình mua hàng – thanh toán</li>
+<li>Tính năng 6: Theo dõi doanh thu của các sản phẩm</li>
+<li>Tính năng 7: Theo dõi hành vi người sử dụng (Multi-Channel Funnels)</li>
+<li>Tính năng 8: Tạo các mô hình so sánh mức độ tham gia của các kênh marketing (Model Comparison)</li>
 <p>Hi vọng bài viết trên đây có thể giúp bạn hiểu kỹ hơn về Web Analytics Software. Cảm ơn bạn đã đọc và quan tâm!</p>
             <div class="tag-widget post-tag-container mb-5 mt-5">
                <div class="tagcloud">
