--- a/chat-bot.html
+++ b/chat-bot.html
@@ -84,19 +84,19 @@
 <p><i>Ví dụ về phân tích yêu cầu của người dùng</i></p>
 <p>Khả năng xác định mục đích của người dùng và trích xuất dữ liệu cũng như các thực thể có liên quan có trong yêu cầu của người dùng là điều kiện đầu tiên và là bước phù hợp nhất cốt lõi của một chatbot: Nếu bạn không thể hiểu chính xác yêu cầu của người dùng, bạn sẽ không có thể cung cấp câu trả lời chính xác.</p>
 <p><b>2) Gửi lại phản hồi:</b> Khi mục đích của người dùng đã được xác định, chatbot phải cung cấp phản hồi phù hợp nhất cho yêu cầu của người dùng. Câu trả lời có thể là:</p>
-<li><p>Văn bản chung chung và được xác định trước</p></li>
-<li><p>Văn bản được truy xuất từ ​​cơ sở tri thức có chứa các câu trả lời khác nhau</p></li>
-<li><p>Đoạn thông tin được ngữ cảnh hóa dựa trên dữ liệu mà người dùng đã cung cấp</p></li>
-<li><p>Dữ liệu được lưu trữ trong hệ thống doanh nghiệp</p></li>
-<li><p>Kết quả của một hành động mà chatbot thực hiện bằng cách tương tác với một hoặc nhiều ứng dụng phụ trợ</p></li>
-<li><p>Một câu hỏi rõ ràng giúp chatbot hiểu chính xác yêu cầu của người dùng</p></li>
+<li>Văn bản chung chung và được xác định trước</li>
+<li>Văn bản được truy xuất từ ​​cơ sở tri thức có chứa các câu trả lời khác nhau</li>
+<li>Đoạn thông tin được ngữ cảnh hóa dựa trên dữ liệu mà người dùng đã cung cấp</li>
+<li>Dữ liệu được lưu trữ trong hệ thống doanh nghiệp</li>
+<li>Kết quả của một hành động mà chatbot thực hiện bằng cách tương tác với một hoặc nhiều ứng dụng phụ trợ</li>
+<li>Một câu hỏi rõ ràng giúp chatbot hiểu chính xác yêu cầu của người dùng</li>
 <h2 class="mb-3 mt-5">Tại sao chatbot lại quan trọng?</h2>
 <p>Ứng dụng Chatbot hợp lý hóa các tương tác giữa con người và dịch vụ, nâng cao trải nghiệm của khách hàng. Đồng thời, họ cung cấp cho các công ty những cơ hội mới để cải thiện quy trình tương tác với khách hàng và hiệu quả hoạt động bằng cách giảm chi phí dịch vụ khách hàng điển hình.</p>
 <p>Để thành công, một giải pháp chatbot phải có thể thực hiện hiệu quả cả hai nhiệm vụ này. Sự hỗ trợ của con người đóng vai trò quan trọng ở đây: Bất kể hình thức tiếp cận và nền tảng nào, sự can thiệp của con người là rất quan trọng trong việc định cấu hình, đào tạo và tối ưu hóa hệ thống chatbot.</p>
 <h2 class="mb-3 mt-5">Các loại chatbot hiện nay</h2>
 <p>Có nhiều cách để phân loại chatbot. Nếu xét theo khía cạnh dịch vụ thì có thể chia chatbot thành 2 loại, đó là:</p>
-<li><p>Chatbot bán hàng</p></li>
-<li><p>Chatbot chăm sóc khách hàng</p></li>
+<li>Chatbot bán hàng</li>
+<li>Chatbot chăm sóc khách hàng</li>
 <h3 class="mb-3 mt-5">Chatbot bán hàng là gì?</h3>
 <p>Là công cụ hỗ trợ bán hàng hoạt động 24/7. Chatbot cập nhật liên tục, giúp bạn không bỏ sót đơn của khách hàng.</p>
 <p>Ưu điểm nổi bật của chatbot là đơn giản, dễ sử dụng. Chatbot bán hàng không cần dùng các phần mềm xử lý ngôn ngữ tự nhiên mà chỉ có các block tương tác đơn giản (text/image/gallery,…) để tương tác với khách hàng. Kịch bản trả lời cũng được xây dựng sẵn từ trước.</p>
@@ -109,11 +109,11 @@
 <p>Trong khi đó, nếu phân loại dựa trên nền tảng đàm thoại thì chatbot có các dạng chủ yếu là: Facebook Messenger, Website, Slack, Telegram,…</p>  
 <p>Ngoài ra, bạn cũng có thể phân loại chatbot theo nền tảng AI phát triển chatbot hoặc dựa trên trải nghiệm người dùng.</p>  
 <p>Ngày nay, chatbot được ứng dụng rất rộng rãi để thực hiện các công việc sau:</p>
-<li><p>Trợ lý cá nhân (Personal Assitant)</p></li>
-<li><p>Giới thiệu sản phẩm, bán hàng, đặt chỗ</p></li>
-<li><p>Chăm sóc khách hàng</p></li>
-<li><p>Thanh toán trực tuyến (Chức năng này đang được sử dụng cho nền tảng Facebook Messenger phiên bản thử nghiệm tại Mỹ)</p></li>
-<li><p>Đưa ra kết quả tìm kiếm, cập nhật tin tức</p></li>
+<li>Trợ lý cá nhân (Personal Assitant)</li>
+<li>Giới thiệu sản phẩm, bán hàng, đặt chỗ</li>
+<li>Chăm sóc khách hàng</li>
+<li>Thanh toán trực tuyến (Chức năng này đang được sử dụng cho nền tảng Facebook Messenger phiên bản thử nghiệm tại Mỹ)</li>
+<li>Đưa ra kết quả tìm kiếm, cập nhật tin tức</li>
 
 <h2 class="mb-3 mt-5">Chatbot chăm sóc khách hàng là gì?</h2>
 <p class="mb-5">
