--- a/digital-commerce-advertising-management-platforms.html
+++ b/digital-commerce-advertising-management-platforms.html
@@ -62,25 +62,25 @@
 
             <p>Nếu bạn đang tìm cách để tự động và tối ưu hóa các chiến dịch quảng cáo thương mại điện tử thì các công cụ quản lý quảng cáo thương mại có thể dành cho bạn.</p>
             <p>Khi phân tích các giải pháp khả thi để tối đa hóa quảng cáo thương mại kỹ thuật số của mình, làm cách nào để bạn phân biệt giữa khả năng của các nhà cung cấp? Hầu như tất cả các nền tảng quản lý quảng cáo thương mại kỹ thuật số đều cung cấp các bộ công cụ và khả năng chủ yếu sau:</p>
-      <li><p>Thực hiện chiến dịch quảng cáo trên Amazon.</p></li>
- <li><p>Quản lý và tối ưu hóa giá thầu tự động.</p></li>
-  <li><p>Báo cáo và phân tích hiệu quả chiến dịch.</p></li>
+      <li>Thực hiện chiến dịch quảng cáo trên Amazon.</li>
+ <li>Quản lý và tối ưu hóa giá thầu tự động.</li>
+  <li>Báo cáo và phân tích hiệu quả chiến dịch.</li>
   <p>Các nền tảng quản lý tạo ra sự khác biệt bằng cách cung cấp thêm các tính năng:</p>
-  <li><p>Hỗ trợ các nền tảng bổ sung, bao gồm Google Ads, Microsoft Ads, Facebook, v.v.</p></li>
-  <li><p>Trí tuệ nhân tạo và các tính năng máy học để quản lý giá thầu.</p></li>
-  <li><p>Phân bổ đa kênh.</p></li>
-  <li><p>Phân tích kinh doanh tinh vi.</p></li>
-<li><p>Các công cụ dành riêng cho người bán của Amazon.</p></li>
+  <li>Hỗ trợ các nền tảng bổ sung, bao gồm Google Ads, Microsoft Ads, Facebook, v.v.</li>
+  <li>Trí tuệ nhân tạo và các tính năng máy học để quản lý giá thầu.</li>
+  <li>Phân bổ đa kênh.</li>
+  <li>Phân tích kinh doanh tinh vi.</li>
+<li>Các công cụ dành riêng cho người bán của Amazon.</li>
 <p>Tiếp theo bài viết sẽ nói về một số tính năng chính để bạn có thể cân nhắc đến việc lựa chọn nền tảng quản lý quảng cáo thương mại kỹ thuật số.</p>
-<li><p>Hỗ trợ phương tiện đa kênh</p></li>
+<li>Hỗ trợ phương tiện đa kênh</li>
 <p>Một số lượng lớn các nhà cung cấp chỉ tập trung vào quảng cáo của Amazon. Mặc dù điều này có thể có nghĩa là họ là chuyên gia của Amazon, nhưng các nhà tiếp thị có thể muốn quản lý các chiến dịch Amazon của họ cùng với quảng cáo được phân phối ở nơi khác.</p>
 
 <p>Một số nền tảng cho phép quản lý chiến dịch trên các trang web tìm kiếm (Google, Microsoft), các mạng xã hội (Facebook, Instagram, Pinterest, Snapchat),...</p>
-<li><p>AI và Machine Learning để tối ưu hóa</p></li>
+<li>AI và Machine Learning để tối ưu hóa</li>
 <p>Tối ưu hóa dựa trên thuật toán - trong đó nhà quảng cáo chỉ ra các trường hợp cần tăng hoặc giảm giá thầu - là tiêu chuẩn trong quảng cáo PPC, nhưng hiện tại đang có những người sử dụng trí tuệ nhân tạo và máy học để thực hiện tối ưu hóa. Với loại công nghệ này, các nhà quảng cáo có thể trực tiếp tối ưu hóa để đầu tư hoặc cho các mục tiêu khác.</p>
-<li><p>Mô hình phân bổ đa kênh</p></li>
+<li>Mô hình phân bổ đa kênh</li>
 <p>Khi các nền tảng cung cấp tính năng quản lý chiến dịch trên nhiều nền tảng, lý tưởng là chúng cũng có thể theo dõi hành trình của khách hàng khi họ tương tác với các điểm tiếp xúc trên các nền tảng đó. Loại theo dõi đó cho phép các nhà tiếp thị chỉ định tín dụng cho các thông điệp khác nhau đã chuyển người mua hàng xuống kênh, để họ có thể tăng hoặc giảm chi tiêu dựa trên kết luận của phân tích đó.</p>
-<li><p>Phân tích kinh doanh phức tạp</p></li>
+<li>Phân tích kinh doanh phức tạp</li>
 <p>Một số nhà cung cấp không chỉ dừng lại ở tính năng cơ bản là báo cáo mà còn cung cấp cho nhà quảng cáo hướng dẫn về những thứ như: khả năng sinh lời trên cơ sở từng sản phẩm, sản phẩm nên hay không nên quảng cáo, thị trường và hoạt động cạnh tranh, v.v.</p>
 
 <p class="mb-5">
