--- a/ung-dung-OTT.html
+++ b/ung-dung-OTT.html
@@ -77,9 +77,9 @@
 <p>Nhớ <b>tin nhắn văn bản?</b> Hầu hết người dùng hiện sử dụng các dịch vụ nhắn tin OTT như WhatsApp, Telegram hoặc Signal, cho phép họ sử dụng kết nối internet để chia sẻ thông tin.</p>
 <p>Tương tự, các dịch vụ OTT bằng <b>giọng nói</b>, như Skype, Zalo hay WhatsApp, ngày càng phổ biến thay vì gọi điện thoại thông thường.</p>
 <h2 class="mb-3 mt-5">Những loại dịch vụ nào có thể là OTT?</h2>
-<li><p><b>Nội dung có giá trị cao với chi phí thấp.</b> Bởi lẽ người dùng chỉ phải trả phí thuê bao nhà mạng hàng tháng còn những giá trị nội dung được cung cấp bởi ứng dụng OTT có thu phí hay không thì phụ thuộc vào mỗi nền tảng và không chịu sự quản lý của nhà mạng.</p></li>
-<li><p><b>Nội dung gốc:</b> FPT Play đã bắt đầu sản xuất nội dung gốc chỉ có sẵn thông qua dịch vụ của họ. Các nền tảng như HBO Go và Disney + cũng có giấy phép phát trực tuyến độc quyền cho nội dung được truyền hình trước đó.</p></li>
-<li><p><b>Khả năng thích ứng với nhiều thiết bị:</b> Hiện nay, OTT đã được tương thích với rất nhiều thiết bị, từ máy chơi game, điện thoại thông minh, máy tính bảng hoặc TV thông minh, bất kỳ tài khoản nào cũng có thể đăng nhập và trải nghiệm OTT.</p></li>
+<li><b>Nội dung có giá trị cao với chi phí thấp.</b> Bởi lẽ người dùng chỉ phải trả phí thuê bao nhà mạng hàng tháng còn những giá trị nội dung được cung cấp bởi ứng dụng OTT có thu phí hay không thì phụ thuộc vào mỗi nền tảng và không chịu sự quản lý của nhà mạng.</li>
+<li><b>Nội dung gốc:</b> FPT Play đã bắt đầu sản xuất nội dung gốc chỉ có sẵn thông qua dịch vụ của họ. Các nền tảng như HBO Go và Disney + cũng có giấy phép phát trực tuyến độc quyền cho nội dung được truyền hình trước đó.</li>
+<li><b>Khả năng thích ứng với nhiều thiết bị:</b> Hiện nay, OTT đã được tương thích với rất nhiều thiết bị, từ máy chơi game, điện thoại thông minh, máy tính bảng hoặc TV thông minh, bất kỳ tài khoản nào cũng có thể đăng nhập và trải nghiệm OTT.</li>
 <h2 class="mb-3 mt-5">Tiềm năng phát triển OTT tại Việt Nam</h2>
 <p class="mb-5">
               <img src="images/image_2.jpg" alt="" class="img-fluid">
